networkPolicy/database-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cassandra-ingress
  namespace: cassandra
spec:
  podSelector:
    matchLabels:
      run: cassandra
  policyTypes:
    - Ingress
  ingress:
   - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: default
        podSelector:
          matchLabels:
            role: backend

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-engress
  namespace: cassandra
spec:
  podSelector: 
    {}
  policyTypes:
  - Ingress
  - Egress
  egress:
   - to:
     ports:
       - port: 53
         protocol: TCP
       - port: 53
         protocol: UDP
