networkPolicy/denyAll.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-engress
spec:
  podSelector: 
    matchExpressions:
      - {key: run, operator: In, values: [frontend, backend]}
  policyTypes:
  - Ingress
  - Egress
  egress:
   - to:
     ports:
       - port: 53
         protocol: TCP
       - port: 53
         protocol: UDP
